# PGWiringX

./: CMakeLists.txt  README.md  fetch_and_config.sh  macInstall.sh
PGWiringX/: CMakeLists.txt  Info.plist  PGWXSupport.h  PGWXSupport.m  PGWiringX.h  PGWiringX.m
PGWiringX.xcodeproj/: project.pbxproj
PGWiringX/I2C/: PGWXI2CChannel.h  PGWXI2CChannel.m
PGWiringX/I2C/Private/: PGWXBogusI2C.h  PGWXBogusI2C.m  i2c-dev.c  i2c-dev.h
PGWiringX/Private/: PGWXLayout.h  PGWXLayout.m  PGWXPlatform.h  PGWXPlatform.m  PGWXSOC.h  PGWXSOC.m
PGWiringX/Private/Boards/: PGWXPlatformHardkernel.h  PGWXPlatformHardkernel.m  PGWXPlatformLemaker.h  PGWXPlatformLemaker.m  PGWXPlatformLinkSprite.h  PGWXPlatformLinkSprite.m  PGWXPlatformRaspberryPi.h  PGWXPlatformRaspberryPi.m  PGWXPlatformSolidRun.h  PGWXPlatformSolidRun.m  PGWXPlatformXunLong.h  PGWXPlatformXunLong.m
PGWiringX/Private/Chipsets/: PGWXSOCAllwinner.h  PGWXSOCAllwinner.m  PGWXSOCAmlogic.h  PGWXSOCAmlogic.m  PGWXSOCBroadcomm.h  PGWXSOCBroadcomm.m  PGWXSOCNXP.h  PGWXSOCNXP.m  PGWXSOCSamsung.h  PGWXSOCSamsung.m
PGWiringX/Private/Support/: PGWXAddr.m  PGWXBit.h
PGWiringX/Source/: PGWXAddr.h  PGWXAddr.m  PGWXBit.h  PGWXBit.m  PGWXLayout.h  PGWXLayout.m  PGWXPlatform.h  PGWXPlatform.m  PGWXSOC.h  PGWXSOC.m
PGWiringX/Source/Boards/: PGWXPlatformHardkernel.h  PGWXPlatformHardkernel.m  PGWXPlatformLemaker.h  PGWXPlatformLemaker.m  PGWXPlatformLinkSprite.h  PGWXPlatformLinkSprite.m  PGWXPlatformRaspberryPi.h  PGWXPlatformRaspberryPi.m  PGWXPlatformSolidRun.h  PGWXPlatformSolidRun.m  PGWXPlatformXunLong.h  PGWXPlatformXunLong.m
PGWiringX/Source/Chipsets/: PGWXSOCAllwinner.h  PGWXSOCAllwinner.m  PGWXSOCAmlogic.h  PGWXSOCAmlogic.m  PGWXSOCBroadcomm.h  PGWXSOCBroadcomm.m  PGWXSOCNXP.h  PGWXSOCNXP.m  PGWXSOCSamsung.h  PGWXSOCSamsung.m
PGWiringXTests/: PGWiringXTests.m
(+3 files in other folders)
